<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">KolaHoops Bluetooth</string>
    
    <!-- DropDownArrays -->
    <string name="pattern">Pattern</string>
    <string-array name="patterns">
    <!-- full color patterns -->
 <item>Sparkle</item>
 <item>RainbowChase</item>
 <item>ColorDrift</item>
 <item>RainbowDance</item>
 <item>SineChase</item>
 <item>SineDance</item>
 <item>Rainbow Sine Chase</item>
 <item>Long SineChase Mod</item>
 <item>Color Drift SineChase</item>
 <item>Wavy Flag</item>
 <item>Simple Orbit</item>
 <item>Sine Chase</item>
 <item>Sine Compass</item>
 <item>POV</item>
   <!-- Color scheme responsive patterns -->
  <item>Scheme Test</item>
  <item>Four Fade</item>
  <item>Two Color Spin</item>
  <item>Whacky</item>
  <item>Accel Sparkle</item>
  <item>One Fade</item>
  <item>Scheme Sparkle</item>
  <item>Test Fade</item>
  <item>Test Long Fade</item>
  <item>Scheme Chase</item>
  <item>Who?</item>
  <item>Rainbow Chase</item>
  <item>RainDance</item>
  <item>Compass Heading</item>
  <item>Compass Heading Solid</item>
  <item>Dice</item>
  <item>Schemetest</item>
  <item>Scheme Test long</item>
  <item>Scheme Fade</item>
  <item>This guy</item>
  <item>PacMan</item>
  <item>Strobe</item>
  <item>Fans</item>
  <item>Scroll</item>
  <item>DancePOV</item>
<item>SideSquarePOV</item>
<item>BigBricksPOV</item>
<item>YUM</item>
<item>SparkleLightsPOV</item>
<item>BamPOV</item>
<item>IDKPOV</item>
<item>FourColorStrobePOV</item>
<item>TwoColorStrobePOV</item>
<item>OneColorStrobePOV</item>
<item>SpreadPOV</item>
<item>TimePOV</item>
<item>SlagPOV</item>
<item>AmericanFlagPOV</item>
<item>RingsPOV</item>
<item>ArrowPOV</item>
<item>MultiBoxPOV</item>
<item>NewPOV</item> 
<item>CrossTheTPOV</item>
<item>TheBigDownPOV</item>
<item>TheBigDownSquarePOV</item>
<item>UpDownPOV</item>
<item>DoubleDimePOV</item>
<item>FourWayCheckersPOV</item>
<item>FourColorCheckersPOV</item>
<item>ZigZagPOV</item>
<item>CrazyCirclesPOV</item>
<item>testcolorPOV</item>
<item>colorflagPOV</item>
<item>PlaidPOV</item>
<item>SmallCirclePOV</item>
<item>QuadHelixPOV</item>
<item>WavePOV</item>
<item>HeartPOV</item>
<item>MazePOV</item>
<item>StarPOV</item>
<item>WavyPOV</item>
<item>MoonPOV</item>
<item>CatPOV</item>
<item>OooPOV</item>
<item>ChainsPOV</item>
<item>MiniTriPOV</item>
<item>FourSquarePOV</item>
<item>CheckerboardPOV</item>
<item>FourSquarePOV</item>
<item>CheckerboardPOV</item>
<item>SliderPOV</item>
<item>SmileyPOV</item>
<item>FloatPOV</item>
<item>ZagPOV</item>
<item>NewCirclePOV</item>
<item>DoubleHelixPOV</item>
<item>BubblesPOV</item>
<item>MovePOV</item>
<item>DiagCheckersPOV</item>
    </string-array>
    <string-array name="scheme"> 
   <item>User Created</item>
  <item>Major</item>
  <item>Natural minor</item>
  <item>Harmonic minor</item>
  <item>Dorian</item>
  <item>Mixolydian</item>
  <item>Red-Green &#188;</item>
  <item>Green-Blue &#188;</item>
  <item>Blue-Red &#188;</item>
  <item>Red-Blue &#189;</item>
   <item>Green-Red &#189;</item>
  <item>Blue-Green &#189;</item>
  <item>Solid Red</item>
  <item>Solid Orange</item>
  <item>Solid Yellow</item>
  <item>Solid Green</item>
  <item>Solid Teal</item>
  <item>Solid Blue</item>
  <item>Solid Indigo</item>
  <item>Solid Violet</item>
  <item>Red and Black</item>
  <item>Orange and Black</item>
  <item>Yellow and Black</item>
  <item>Green and Black</item>
  <item>Teal and Black</item>
  <item>Blue and Black</item>
  <item>Indigo and Black</item>
  <item>Violet and Black</item>
  <item>Red and White</item>
  <item>Orange and White</item>
  <item>Yellow and White</item>
  <item>Green and White</item>
  <item>Teal and White</item>
  <item>Blue and White</item>
  <item>Indigo and White</item>
  <item>Violet and White</item>
  <item>Rainbow</item>
  <item>37</item>
<item>38</item>
<item>39</item>
<item>40</item>
<item>41</item>
<item>42</item>
<item>43</item>
<item>44</item>
<item>45</item>
<item>46</item>
<item>47</item>
<item>48</item>
<item>49</item>
<item>50</item>
<item>51</item>
<item>52</item>
<item>53</item>
<item>54</item>
<item>55</item>
<item>56</item>
<item>57</item>
<item>58</item>
<item>59</item>
<item>60</item>
<item>61</item>
<item>62</item>
<item>61</item>
<item>63</item>
<item>64</item>
<item>65</item>
<item>66</item>
<item>67</item>
<item>68</item>
<item>69</item>
<item>70</item>
<item>71</item>
<item>72</item>
<item>73</item>
<item>74</item>
<item>75</item>
<item>78</item>
<item>79</item> 
<item>80</item>
<item>81</item>
<item>82</item>
<item>83</item>
<item>84</item>
<item>85</item>
<item>86</item>
<item>87</item>
<item>88</item>
<item>89</item>
<item>90</item>
<item>91</item>
<item>92</item>
<item>93</item>
<item>94</item>
<item>95</item>
<item>96</item>
<item>97</item>
<item>98</item>
<item>99</item>
<item>100</item>
<item>101</item>
<item>102</item>
<item>103</item>
<item>104</item>
<item>105</item>
<item>106</item>
<item>107</item>
<item>108</item>
<item>109</item>
<item>110</item>
<item>111</item>
<item>112</item>
<item>113</item>
<item>114</item>
<item>115</item>
<item>116</item>
<item>117</item>
<item>118</item>
<item>119</item>
<item>120</item>
<item>121</item>
<item>122</item>
<item>123</item>
<item>124</item>
<item>125</item>
<item>126</item>
<item>127</item>
<item>128</item>
<item>129</item>
<item>130</item>
<item>131</item>
<item>132</item>
<item>133</item>
<item>134</item>
<item>135</item>
<item>136</item>
<item>137</item>
<item>138</item>
<item>139</item>
<item>140</item>
<item>141</item>
<item>142</item>
<item>143</item>
<item>144</item>
<item>145</item>
<item>146</item>
<item>147</item>
<item>148</item>
<item>149</item>
<item>150</item>
<item>151</item>
<item>152</item>
<item>153</item>
<item>154</item>
<item>155</item>
<item>156</item>
<item>157</item>
<item>158</item>
<item>159</item>
<item>160</item>
<item>161</item>
<item>162</item>
<item>163</item>
<item>164</item>
<item>165</item>
<item>166</item>
<item>167</item>
<item>168</item>
<item>169</item>
<item>170</item>
<item>171</item>
<item>172</item>
<item>173</item>
<item>174</item>
<item>175</item>
<item>176</item>
<item>177</item>
<item>178</item>
<item>179</item>
<item>180</item>
<item>181</item>
<item>182</item>
<item>183</item>
<item>184</item>
<item>185</item>
<item>186</item>
<item>187</item>
<item>188</item>
<item>189</item>
<item>190</item>
<item>191</item>
<item>192</item>
<item>193</item>
<item>194</item>
<item>195</item>
<item>196</item>
<item>197</item>
<item>198</item>
<item>199</item>
<item>200</item>
<item>201</item>
<item>202</item>
<item>203</item>
<item>204</item>
<item>205</item>
<item>206</item>
<item>207</item>
<item>208</item>
<item>209</item>
<item>210</item>
<item>211</item>
<item>212</item>
<item>213</item>
<item>214</item>
<item>215</item>
<item>216</item>
<item>217</item>
<item>218</item>
<item>219</item>
<item>220</item>
<item>221</item>
<item>222</item>
<item>223</item>
<item>224</item>
<item>225</item>
<item>226</item>
<item>227</item>
<item>228</item>
<item>229</item>
<item>230</item>
<item>231</item>
<item>232</item>
<item>233</item>
<item>234</item>
<item>235</item>
<item>236</item>
<item>237</item>
<item>238</item>
<item>239</item>
<item>240</item>
<item>241</item>
<item>242</item>
<item>243</item>
<item>244</item>
<item>245</item>
<item>246</item>
<item>247</item>
<item>248</item>
<item>249</item>
<item>250</item>
<item>251</item>
<item>252</item>
<item>253</item>
<item>254</item>
<item>255</item>
        </string-array>
    <string name="pattern_button">Choose Pattern</string>
    <string name="scheme">Color Scheme</string>
    <string name="scheme_button">Choose Scheme</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="button00">Reset</string>
    <string name="button01">Accelerometer</string>
    <string name="button02">Demo Mode</string>
    <string name="button03">Ir Learn Mode</string>
    <string name="button04"></string>
    <string name="button05">5</string>
    <string name="button06">6</string>
    <string name="button07">7</string>
    <string name="button08">8</string>
    <string name="button09">9</string>
    <string name="button10">A</string>
    <string name="button11">B</string>
    <string name="button12">C</string>
    <string name="button13">D</string>
    <string name="button14">E</string>
    <string name="button15">F</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
</resources>
